<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_edit"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/nav_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />
</menu>